--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 .card {
   font-family:'Favorit',sans-serif;
   box-shadow: 0px 8px 24px -6px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  border-radius: 24px;
   padding:0;
   color: #fff;
   padding: 0px;
@@ -61,7 +61,7 @@
   height:66%;
   background-repeat: no-repeat;
   background-size: 320px 380px;
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 24px 24px 0px 0px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -96,7 +96,7 @@ h1.lineup{
 .card-bottom {
   background-color:black;
   height:34%;
-  border-radius: 0px 0px 20px 20px;
+  border-radius: 0px 0px 24px 24px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -139,7 +139,7 @@ h1.lineup{
 }
 
 .button{
-  padding:4px 2px 0px 2px;
+  padding:2px;
   background-color:#FFD600;
   border-radius: 100px;
   left:960px;
