--- a/style.css
+++ b/style.css
@@ -146,12 +146,6 @@ h1.lineup{
   transition-duration: 0.5s;
 }
 
-.button:hover{
-  cursor:pointer;
-  transition-duration: 0.5s;
-  box-shadow: 0px 0px 30px rgba(255, 214, 0, 0.9);
-}
-
 .button>p{
   color:black;
   font-family: "Anicons Regular", sans-serif;
@@ -162,6 +156,14 @@ h1.lineup{
   height:40px;
   font-variation-settings: "TIME" 1;
   transition: font-variation-settings 0.5s ease;
+}
+
+/* HOVER FUNCTION ON THE ROUND BUTTON */
+
+.button:hover{
+  cursor:pointer;
+  transition-duration: 0.5s;
+  box-shadow: 0px 0px 30px rgba(255, 214, 0, 0.9);
 }
 
 .button>p:hover{
