--- a/ex-2/style.css
+++ b/ex-2/style.css
@@ -52,9 +52,13 @@
   gap: 54px;
 }
 
-div.overlay{
-  display: none;
+.hide{
+  display:none;
 }
+/*
+div.game{
+  display: none;
+}*/
 
 .game{
   display: flex;
@@ -84,10 +88,10 @@ div.overlay{
   height:80px;
   background-color:grey;
 }
-/*
+
 .box:hover{
-  background-color: blue;
-}*/
+  cursor:pointer;
+}
 
 button{
   border:1px solid #3E3E3E;
@@ -106,8 +110,10 @@ button:hover{
   height:100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   padding: 0px;
+  gap: 121px;
 }
 
 .divider{
@@ -157,4 +163,8 @@ p{
 
 .orange{
   background-color:orange;
+}
+
+.hide{
+  display:none;
 }
